--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: eivindw writings
 email: eivind@kodemaker.no
 description: eivindw writes about stuff he discovers at work, mostly JVM-related.
-baseurl: "/blog"
+baseurl: ""
 url: "http://eivindw.github.io"
 twitter_username: eivindw
 github_username: eivindw
