--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: eivindw writings
-email: eivind@kodemaker.no
+name: :kodemaker [:eivind]
+km: http://www.kodemaker.no/eivind
 description: eivindw writes about stuff he discovers at work, mostly JVM-related.
-baseurl: ""
 url: "http://eivindw.github.io"
 twitter_username: eivindw
 github_username: eivindw
